# apps/auth-service/src/controller/auth.controller.ts
@@ -1,12 +1,21 @@
 import { NextFunction, Request, Response } from "express";
 import {
   checkOtpRestriction,
+  handleForgotPassword,
   sendOtp,
   trackOtpRequest,
   validationRegistrationData,
+  verifyForgotPasswordOtp,
+  verifyOtp,
 } from "../utils/auth.helper";
 import prisma from "@packages/libs/prisma/index";
-import { ValidationError } from "@packages/error-handler/index";
+import {
+  AuthenticationError,
+  ValidationError,
+} from "@packages/error-handler/index";
+import bcrypt from "bcryptjs";
+import jwt from "jsonwebtoken";
+import { setCookie } from "../utils/cookies/setCookie";
 
 // Register a new user
 export const userRegistration = async (
@@ -27,11 +36,152 @@ export const userRegistration = async (
 
     await checkOtpRestriction(email, next);
     await trackOtpRequest(email, next);
-    await sendOtp(email, name, "user-activation-mail");
+    await sendOtp(name, email, "user-activation-mail");
 
     res.status(200).json({
       message: "OTP sent to email. Please verify your account.",
     });
+  } catch (error) {
+    return next(error);
+  }
+};
+
+// verify user with otp
+export const verifyUser = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { email, otp, password, name } = req.body;
+    if (!email || !otp || !password || !name) {
+      throw new ValidationError("Missing required fields");
+    }
+
+    const existingUser = await prisma.users.findUnique({ where: { email } });
+    if (existingUser) {
+      throw new ValidationError("User already exists with this email.");
+    }
+
+    await verifyOtp(email, otp, next);
+    const hashedPassword = await bcrypt.hash(password, 10);
+
+    await prisma.users.create({
+      data: {
+        name,
+        email,
+        password: hashedPassword,
+      },
+    });
+
+    res.status(201).json({ message: "User registered successfully." });
+  } catch (error) {
+    return next(error);
+  }
+};
+
+// login user
+export const loginUser = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { email, password } = req.body;
+    if (!email || !password) {
+      throw new ValidationError("Missing required fields");
+    }
+    const user = await prisma.users.findUnique({ where: { email } });
+    if (!user) {
+      throw new AuthenticationError("User does not exist");
+    }
+    // verify password
+    const isPasswordValid = await bcrypt.compare(password, user.password!);
+    if (!isPasswordValid) {
+      throw new AuthenticationError("Invalid email or password");
+    }
+
+    // generate access and refresh token
+    const accessToken = jwt.sign(
+      { id: user.id, role: "user" },
+      process.env.ACCESS_TOKEN_SECRET as string,
+      { expiresIn: "15m" }
+    );
+
+    const refreshToken = jwt.sign(
+      { id: user.id, role: "user" },
+      process.env.REFRESH_TOKEN_SECRET as string,
+      { expiresIn: "7d" }
+    );
+
+    // store the refresh and access token in an httpOnly secure cookie
+    setCookie(res, "refresh_token", refreshToken);
+    setCookie(res, "access_token", accessToken);
+
+    res.status(200).json({
+      message: "Login successful",
+      user: {
+        id: user.id,
+        name: user.name,
+        email: user.email,
+      },
+    });
+  } catch (error) {
+    return next(error);
+  }
+};
+
+// user forgot password
+export const userForgotPassword = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  await handleForgotPassword(req, res, next, "user");
+};
+
+// Verify forgot password OTP
+export const verifyForgotPassword = async (
+  req: Request,
+  res: Response,
+  next: NextFunction,
+  userType: "user" | "seller"
+) => {
+  await verifyForgotPasswordOtp(req, res, next, (userType = "user"));
+};
+
+// reset user password
+export const resetUserPassword = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { email, newPassword } = req.body;
+    if (!email || !newPassword) {
+      throw new ValidationError("Missing required fields");
+    }
+
+    const user = await prisma.users.findUnique({ where: { email } });
+    if (!user) {
+      throw new ValidationError("User does not exist");
+    }
+
+    // compare new password with old password
+    const isSamePassword = await bcrypt.compare(newPassword, user.password!);
+    if (isSamePassword) {
+      throw new ValidationError(
+        "New password must be different from the old password"
+      );
+    }
+
+    const hashedPassword = await bcrypt.hash(newPassword, 10);
+    await prisma.users.update({
+      where: { email },
+      data: { password: hashedPassword },
+    });
+
+    res.status(200).json({ message: "Password reset successful." });
   } catch (error) {
     return next(error);
   }
