# apps/auth-service/src/routes/auth.router.ts
@@ -1,8 +1,20 @@
 import express from "express";
-import { userRegistration } from "../controller/auth.controller";
+import {
+  loginUser,
+  resetUserPassword,
+  userForgotPassword,
+  userRegistration,
+  verifyForgotPassword,
+  verifyUser,
+} from "../controller/auth.controller";
 
 const router = express.Router();
 
 router.post("/user-registration", userRegistration);
+router.post("/verify-user", verifyUser);
+router.post("/login-user", loginUser);
+router.post("/forgot-password-user", userForgotPassword);
+router.post("/reset-password-user", resetUserPassword);
+router.post("/verify-forgot-password-user", verifyForgotPassword);
 
 export default router;
